# confify

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pyrightconfig.json  setup.py  test-static-type.sh
.claude/commands/: release.md
.github/workflows/: test.yml
confify/: __init__.py  base.py  builder.py  cli.py  parser.py  schema.py  utils.py  yaml.py
confify/builder/: __init__.py  base.py
docs/: cli.md
examples/: ex_basic.py  ex_expressions.py  ex_generator.py  ex_ml_config.py  ex_sweep_patterns.py  ex_variables.py
static_tests/: test_basic.py  test_expressions.py  test_generator.py  test_ml_config.py  test_sweep_patterns.py  test_variables.py
tests/: test_cli.py  test_insert_dict.py  test_parse.py  test_parse_generic.py  test_str_to_sequence.py  test_union_dataclass.py  test_yaml.py
tests/yaml_files/: path.yaml
