[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confify"
dynamic = ["version"]
description = "Confify is a fully typed, plug-and-play configuration library for Python."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Milin Kodnongbua", email = "mil.millin@gmail.com"}
]
keywords = ["configuration", "config", "typed", "dataclass", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/milmillin/confify"
Repository = "https://github.com/milmillin/confify"
Issues = "https://github.com/milmillin/confify/issues"

[tool.setuptools.dynamic]
version = {attr = "confify.__version__"}

[tool.setuptools.packages.find]
include = ["confify*"]

[tool.black]
line-length = 120
